Fix a break in the build.xml cleanup.  Improved single document view page.  Align and underline dataset title.

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,14 @@ input[readonly] {
   border: none;
 }
 
+/* Used for highlighted code areas. */
+pre {
+  font-size: 0.8em;
+  padding: 1em;
+  background-color: #f7f7f7;
+  border: solid 1px #ccc;
+}
+
 /* Styles */
 
 .removed {
